--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 }
     </style>
     
-        <title>Page Title</title>
+        <title>YouTube watch time task</title>
         <script async defer src="https://www.youtube.com/iframe_api"></script>
 
     </head>
